--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana Beast - Outsmart the Jungle, Claim the Crown</title>
+    <!-- Basic metadata for search visibility -->
     <meta name="description" content="Banana Beast is the ultimate jungle puzzle challenge. Outsmart the vines, stack massive scores, and reign as the true Banana Beast." />
     <meta name="author" content="Banana Beast" />
     <meta name="keywords" content="puzzle game, banana beast, jungle puzzle, brain game, banana challenge" />
 
+    <!-- Open Graph data for link previews -->
     <meta property="og:title" content="Banana Beast - Outsmart the Jungle, Claim the Crown" />
     <meta property="og:description" content="Banana Beast is the ultimate jungle puzzle challenge. Outsmart the vines, stack massive scores, and reign as the true Banana Beast." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
+    <!-- Twitter card summary -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/images/ui/coins.png" />
   </head>
 
   <body>
+    <!-- React root -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
